traversal.snake.Snake.scala.error
Compilation error:
Snake:10: error: method positionFinale has return statement; needs result type
              return true
              ^Snake:15: error: method positionFinale has return statement; needs result type
              return false
              ^Snake:23: error: method positionFinale has return statement; needs result type
                return true
                ^Snake:28: error: method positionFinale has return statement; needs result type
                  return false
                  ^Snake:34: error: method positionFinale has return statement; needs result type
    return false
    ^